# swift-bindgen

./: Cargo.toml  README.md
src/: lib.rs
swift/: Cargo.toml
swift-rt/: Cargo.toml
swift-rt/src/: lib.rs  obj.rs  sym.rs
swift-sys/: Cargo.toml
swift-sys/src/: heap.rs  lib.rs  sym.rs  sync.rs
swift-sys/src/metadata/: kind.rs  mod.rs
swift-sys/src/metadata/value_witness/: builtin.rs  mod.rs  table.rs
swift/src/: lib.rs  never.rs  primitive.rs  string.rs  ty.rs  unicode.rs
swift/src/object/: any.rs  identifier.rs  mod.rs
swift/src/ptr/: mod.rs  raw.rs  typed.rs
