[package]
name = "swift-rt"
version = "0.0.0"
description = "[WIP] Call into Swift's runtime."
authors = ["Nikolai Vazquez <nikvzqz@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustswift/swift-bindgen"
repository = "https://github.com/rustswift/swift-bindgen"
documentation = "https://docs.rs/swift-rt"
edition = "2018"
keywords = ["swift", "runtime"]
categories = ["api-bindings", "development-tools::ffi"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
swift-sys = { path = "../swift-sys", version = "0.0.0" }
