[package]
name = "swift"
version = "0.0.0"
description = "[WIP] Bindings to Swift's standard library."
authors = ["Nikolai Vazquez <nikvzqz@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustswift/swift-bindgen"
repository = "https://github.com/rustswift/swift-bindgen"
documentation = "https://docs.rs/swift"
edition = "2018"
keywords = ["swift", "bindgen", "stdlib"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
swift-rt = { path = "../swift-rt", version = "0.0.0" }
swift-sys = { path = "../swift-sys", version = "0.0.0" }
